<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <string name="app_name">OdinParts</string>

    <string name="odin_settings_title">Odin settings</string>
    <string name="odin_settings_summary">Additional device specific tweaks</string>

    <string name="performance_title">Performance</string>
    <string name="performance_summary">CPU/GPU mode and fan control</string>
    <string name="performance_mode_title">Performance mode</string>
    <string name="performance_mode_standard">Standard</string>
    <string name="performance_mode_performance">Performance</string>
    <string name="performance_mode_high">High performance</string>
    <string name="performance_qs_tile_label">Performance mode</string>

    <string name="light_title">Lights</string>
    <string name="light_summary">Joystick and handle lighting</string>
    <string name="light_master_title">Enable lights</string>
    <string name="light_joystick_title">Joystick lights</string>
    <string name="light_joystick_summary">Left and right analog stick lights</string>
    <string name="light_handle_title">Handle lights</string>
    <string name="light_handle_summary">Left and right side handle lights</string>
    <string name="light_qs_tile_label">Console lights</string>

    <string name="fan_mode_title">Fan</string>
    <string name="fan_mode_off">Off</string>
    <string name="fan_mode_quiet">Quiet</string>
    <string name="fan_mode_medium">Medium</string>
    <string name="fan_mode_sport">Sport</string>
    <string name="fan_mode_smart">Smart</string>
</resources>
